# wssvr

./: Makefile.am  configure.ac
html/: test.html
include/: wssvr.hpp
src/: Makefile.am  wssvr.cpp
